// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnorderedList /> can have a list style 1`] = `
<UnorderedList
  listStyle="circle"
  size="medium"
>
  <Styled(Box)
    between={2}
    tag="ul"
  >
    <Box
      between={2}
      className="sc-eqUAAy eUciOt"
      inline={false}
      tag="ul"
    >
      <styled.div
        between={2}
        className="sc-eqUAAy eUciOt"
        inline={false}
        tag="ul"
      >
        <ul
          className="sc-gEvEer MkeJt sc-eqUAAy eUciOt sc-eqUAAy eUciOt"
        >
          <UnorderedList.Item
            key=".$.0"
            listStyle="circle"
            size="medium"
          >
            <styled.li
              iconStyle="circle"
              size="medium"
            >
              <li
                className="sc-aXZVg chrzLG"
                size="medium"
              >
                Lorem ipsum
              </li>
            </styled.li>
          </UnorderedList.Item>
          <UnorderedList.Item
            key=".$.2"
            listStyle="circle"
            size="medium"
          >
            <styled.li
              iconStyle="circle"
              size="medium"
            >
              <li
                className="sc-aXZVg chrzLG"
                size="medium"
              >
                Dolor sit amet
              </li>
            </styled.li>
          </UnorderedList.Item>
        </ul>
      </styled.div>
    </Box>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> can have a list style 2`] = `
<UnorderedList
  listStyle="x"
  size="medium"
>
  <Styled(Box)
    between={2}
    tag="ul"
  >
    <Box
      between={2}
      className="sc-eqUAAy eUciOt"
      inline={false}
      tag="ul"
    >
      <styled.div
        between={2}
        className="sc-eqUAAy eUciOt"
        inline={false}
        tag="ul"
      >
        <ul
          className="sc-gEvEer MkeJt sc-eqUAAy eUciOt sc-eqUAAy eUciOt"
        >
          <UnorderedList.Item
            key=".$.0"
            listStyle="x"
            size="medium"
          >
            <styled.li
              iconStyle="x"
              size="medium"
            >
              <li
                className="sc-aXZVg jvGpWV"
                size="medium"
              >
                Lorem ipsum
              </li>
            </styled.li>
          </UnorderedList.Item>
          <UnorderedList.Item
            key=".$.2"
            listStyle="x"
            size="medium"
          >
            <styled.li
              iconStyle="x"
              size="medium"
            >
              <li
                className="sc-aXZVg jvGpWV"
                size="medium"
              >
                Dolor sit amet
              </li>
            </styled.li>
          </UnorderedList.Item>
        </ul>
      </styled.div>
    </Box>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> renders 1`] = `
<ul
  class="sc-gEvEer MkeJt sc-eqUAAy eUciOt sc-eqUAAy eUciOt"
>
  <li
    class="sc-aXZVg chrzLG"
  >
    Lorem ipsum
  </li>
  <li
    class="sc-aXZVg chrzLG"
  >
    Dolor sit amet
  </li>
</ul>
`;

exports[`<UnorderedList /> renders a mixed list of items 1`] = `
<Styled(Box)
  between={2}
  tag="ul"
>
  <UnorderedList.Item
    itemStyle="checkmark"
    key=".$.0"
    listStyle="circle"
    size="medium"
  >
    Lorem ipsum
  </UnorderedList.Item>
  <UnorderedList.Item
    itemStyle="x"
    key=".$.1"
    listStyle="circle"
    size="medium"
  >
    Dolor sit amet
  </UnorderedList.Item>
</Styled(Box)>
`;
